--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "Shmuel Leider",
     "license": "ISC",
     "devDependencies": {
+        "dotenv": "^8.0.0",
         "nodemon": "^1.19.1"
     },
     "dependencies": {
