--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     },
     "dependencies": {
         "body-parser": "^1.19.0",
+        "connect-mongodb-session": "^2.2.0",
         "ejs": "^2.6.1",
         "express": "^4.17.1",
         "express-handlebars": "^3.1.0",
+        "express-session": "^1.16.2",
         "mongodb": "^3.2.7",
         "mongoose": "^5.6.0",
         "mysql2": "^1.6.5",
