--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
         "nodemon": "^1.19.1"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "connect-flash": "^0.1.1",
         "connect-mongodb-session": "^2.2.0",
+        "csurf": "^1.10.0",
         "ejs": "^2.6.1",
         "express": "^4.17.1",
         "express-handlebars": "^3.1.0",
@@ -23,7 +26,6 @@
         "mongodb": "^3.2.7",
         "mongoose": "^5.6.0",
         "mysql2": "^1.6.5",
-        "pug": "^2.0.3",
-        "sequelize": "^5.8.9"
+        "pug": "^2.0.3"
     }
 }
