--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "express": "^4.17.1",
         "express-handlebars": "^3.1.0",
         "express-session": "^1.16.2",
+        "express-validator": "^6.1.0",
         "mongodb": "^3.2.7",
         "mongoose": "^5.6.0",
         "mysql2": "^1.6.5",
