--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "express-validator": "^6.1.0",
         "mongodb": "^3.2.7",
         "mongoose": "^5.6.0",
+        "multer": "^1.4.1",
         "mysql2": "^1.6.5",
         "nodemailer": "^6.2.1",
         "nodemailer-sendgrid-transport": "^0.2.0",
