--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "nodemailer": "^6.2.1",
         "nodemailer-sendgrid-transport": "^0.2.0",
         "pdfkit": "^0.10.0",
-        "pug": "^2.0.3"
+        "pug": "^2.0.3",
+        "stripe": "^7.4.0"
     }
 }
